--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,14 @@
 body {
+  height: 100%;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+  background-image: url("./assest/img/Fondo.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
